Obfuscate REI Internals